@startuml admin-user-class-diagram
skinparam classAttributeIconSize 0
skinparam backgroundColor white
skinparam shadowing false
skinparam ArrowColor #333333
skinparam ArrowThickness 1
skinparam RectanglePadding 10
skinparam classFontSize 12
skinparam classAttributeFontSize 10
skinparam classHeaderFontSize 12
skinparam packageFontSize 12
skinparam pageMargin 20
skinparam dpi 150


title Admin / User — Class Diagram

' ============================================
' FRONTEND (Angular)
' ============================================
package "Frontend (Angular)" {
  class "AdminUserManagementComponent" {
    +users: AdminUserDto[]
    +totalItems: number
    +currentPage: number
    +pageSize: number
    +filterIsActive: boolean | null
    +searchTerm: string
    +isLoading: boolean
    +adjustModal: AdjustPointsModalComponent
    +suspendModal: SuspendUserModalComponent
    +loadUsers(): void
    +adjustPoints(userId: number, dto: AdjustUserPointsDto): void
    +changeStatus(userId: number, dto: ChangeUserStatusDto): void
  }

  class "AdjustPointsModalComponent" {
    +userId: number
    +username: string
    +points: number
    +reason: string
    +result: AdjustPointsResultDto | null
    +submit(): void
  }

  class "SuspendUserModalComponent" {
    +userId: number
    +username: string
    +isActive: boolean
    +reason: string
    +confirm(): void
  }
}

' ============================================
' HTTP LAYER
' ============================================
package "HTTP Layer" {
  class "AuthInterceptor implements HttpInterceptor" {
    +intercept(req: HttpRequest, next: HttpHandler): Observable<HttpEvent>
    +attachBearerToken(req: HttpRequest): HttpRequest
    +isPublicEndpoint(url: string): boolean
  }
}

' ============================================
' BACKEND (C# API)
' ============================================
package "Backend (C# API)" {
  class "UsersController : ControllerBase" {
    +_userService: IUserService
    +GET /api/users/me(): Task<ActionResult<UserDto>>
    +PUT /api/users/me(): Task<ActionResult<UserDto>>
    +GET /api/users/me/statistics(): Task<ActionResult<UserStatisticsDto>>
    +GET /api/users/me/history(): Task<ActionResult<BetHistoryDto[]>>
    +GET /api/users/profile(): Task<ActionResult<UserProfileDto>>
    +GET /api/users/bets(): Task<ActionResult<BetHistoryResponseDto>>
    +GET /api/users/admin/users(): Task<ActionResult<PagedResult<AdminUserDto>>>
    +PATCH /api/users/admin/users/{userId}/points(): Task<ActionResult<AdjustPointsResultDto>>
    +PATCH /api/users/admin/users/{userId}/status(): Task<ActionResult<AdminUserDto>>
  }
}

' ============================================
' APPLICATION LAYER
' ============================================
package "Application Layer" {
  interface "IUserService" {
    +Task<UserDto> GetUserByIdAsync(id: int)
    +Task<UserDto> GetUserByUsernameAsync(username: string)
    +Task RegisterUserAsync(username: string, email: string, password: string)
    +Task<AuthResponseDto> RegisterUserAsync(dto: RegisterDto)
    +Task<AuthResponseDto> AuthenticateUserAsync(dto: LoginDto)
    +Task<AuthResponseDto> RefreshTokenAsync(dto: RefreshTokenDto)
    +Task<bool> ValidateUserAsync(username: string, password: string)
    +Task<int> GetUserLeaderboardPositionAsync(userId: int)
    +Task<UserStatisticsDto> GetUserStatisticsAsync(userId: int)
    +Task UpdateUserPointsAsync(userId: int, points: int)
    +Task<UserProfileDto> GetUserProfileAsync(userId: int)
    +Task<UserProfileDto> UpdateUserProfileAsync(userId: int, dto: UpdateProfileDto)
    +Task<BetHistoryResponseDto> GetUserBetHistoryAsync(userId: int, page: int, pageSize: int)
    ' --- Admin Methods ---
    +Task<PagedResult<AdminUserDto>> GetAllUsersAsync(page: int, pageSize: int, filterIsActive: bool?, searchTerm: string)
    +Task<AdjustPointsResultDto> AdjustUserPointsAsync(userId: int, pointsDelta: int, reason: string, adminUserId: int)
    +Task<AdminUserDto> ChangeUserStatusAsync(userId: int, isActive: bool, reason: string, adminUserId: int)
  }

  class "UserService : IUserService" {
    +_userRepository: IRepository<User>
    +_betRepository: IRepository<Bet>
    +_secretKey: string
    +_issuer: string
    +_audience: string
    +_tokenHandler: JwtSecurityTokenHandler
    +GetUserByIdAsync(id: int): Task<UserDto>
    +GetUserByUsernameAsync(username: string): Task<UserDto>
    +RegisterUserAsync(dto: RegisterDto): Task<AuthResponseDto>
    +AuthenticateUserAsync(dto: LoginDto): Task<AuthResponseDto>
    +RefreshTokenAsync(dto: RefreshTokenDto): Task<AuthResponseDto>
    +ValidateUserAsync(username: string, password: string): Task<bool>
    +GetUserLeaderboardPositionAsync(userId: int): Task<int>
    +GetUserStatisticsAsync(userId: int): Task<UserStatisticsDto>
    +UpdateUserPointsAsync(userId: int, points: int): Task
    +GetUserProfileAsync(userId: int): Task<UserProfileDto>
    +UpdateUserProfileAsync(userId: int, dto: UpdateProfileDto): Task<UserProfileDto>
    +GetUserBetHistoryAsync(userId: int, page: int, pageSize: int): Task<BetHistoryResponseDto>
    +GetAllUsersAsync(page: int, pageSize: int, filterIsActive: bool?, searchTerm: string): Task<PagedResult<AdminUserDto>>
    +AdjustUserPointsAsync(userId: int, pointsDelta: int, reason: string, adminUserId: int): Task<AdjustPointsResultDto>
    +ChangeUserStatusAsync(userId: int, isActive: bool, reason: string, adminUserId: int): Task<AdminUserDto>
    +GenerateJwtToken(user: User): string
    +GenerateRefreshToken(): string
  }
}

' ============================================
' DOMAIN LAYER
' ============================================
package "Domain Layer" {
  class "User : IdentityUser<int>" {
    +int Points { get; set; }
    +DateTime CreatedAt { get; set; }
    +string? ProfileImageUrl { get; set; }
    +DateTime? LastLogin { get; set; }
    +bool IsActive { get; set; }
    +bool IsAdmin { get; set; }
    +User(userName, email, passwordHash)
    +User(userName, email, passwordHash, isActive, isAdmin)
    +AddPoints(points: int): void
    +DeductPoints(points: int): void
    +HasSufficientBalance(requiredPoints: int): bool
  }

  class "Bet" {
    +int Id { get; set; }
    +int UserId { get; set; }
    +int RaceId { get; set; }
    +int DriverId { get; set; }
    +BetType BetType { get; set; }
    +decimal Amount { get; set; }
    +decimal Odds { get; set; }
    +decimal PotentialWinnings { get; set; }
    +decimal Winnings { get; set; }
    +BetStatus Status { get; set; }
    +DateTime CreatedAt { get; set; }
    +DateTime? ResolvedAt { get; set; }
    +Bet(userId, raceId, driverId, amount, betType, odds)
    +ValidateBet(): void
    +ResolveBet(): void
  }

  enum "BetType" {
    // defined in domain
  }

  enum "BetStatus" {
    Pending
    Won
    Lost
    Resolved
  }
}

' ============================================
' INFRASTRUCTURE LAYER
' ============================================
package "Infrastructure Layer" {
  interface "IRepository<T>" as IRepo {
    +Task<T> GetByIdAsync(id: int)
    +Task<IQueryable<T>> GetAllAsync()
    +Task AddAsync(entity: T)
    +Task UpdateAsync(entity: T)
    +Task DeleteAsync(id: int)
    +Task<bool> ExistsAsync(id: int)
    +Task SaveChangesAsync()
    +Task AddAsyncNoBatch(entity: T)
    +Task UpdateAsyncNoBatch(entity: T)
    +Task DeleteAsyncNoBatch(id: int)
  }

  class "AppDbContext : DbContext" {
    +DbSet<Race> Races { get; set; }
    +DbSet<Result> Results { get; set; }
    +DbSet<Driver> Drivers { get; set; }
    +DbSet<Team> Teams { get; set; }
    +DbSet<Bet> Bets { get; set; }
    +DbSet<User> Users { get; set; }
    +OnModelCreating(modelBuilder): void
  }
}

' ============================================
' DTOs
' ============================================
package "DTOs" {
  class "AdminUserDto" {
    +int Id { get; set; }
    +string Username { get; set; }
    +string Email { get; set; }
    +int Points { get; set; }
    +bool IsActive { get; set; }
    +bool IsAdmin { get; set; }
    +DateTime CreatedAt { get; set; }
    +DateTime? LastLogin { get; set; }
  }

  class "AdjustUserPointsDto" {
    +int Points { get; set; }
    +string? Reason { get; set; }
  }

  class "AdjustPointsResultDto" {
    +int UserId { get; set; }
    +string Username { get; set; }
    +int NewBalance { get; set; }
    +int AdjustedBy { get; set; }
    +string? Reason { get; set; }
    +DateTime AdjustedAt { get; set; }
  }

  class "ChangeUserStatusDto" {
    +bool IsActive { get; set; }
    +string? Reason { get; set; }
  }

  class "UserDto" {
    +int Id { get; set; }
    +string Username { get; set; }
    +string Email { get; set; }
    +int Points { get; set; }
    +bool IsAdmin { get; set; }
    +bool IsActive { get; set; }
  }

  class "UserProfileDto" {
    +int Id { get; set; }
    +string Username { get; set; }
    +string Email { get; set; }
    +int Points { get; set; }
    +DateTime CreatedAt { get; set; }
    +DateTime LastLoginAt { get; set; }
  }

  class "UserStatisticsDto" {
    +int UserId { get; set; }
    +string Username { get; set; }
    +int TotalBets { get; set; }
    +int WinningBets { get; set; }
    +decimal WinRate { get; set; }
    +decimal TotalWinnings { get; set; }
    +int Points { get; set; }
    +int Rank { get; set; }
  }

  class "BetHistoryResponseDto" {
    +BetHistoryDto[] Bets { get; set; }
    +int TotalCount { get; set; }
    +int PageNumber { get; set; }
    +int PageSize { get; set; }
  }

  class "BetHistoryDto" {
    +int Id { get; set; }
    +string UserId { get; set; }
    +int RaceId { get; set; }
    +int DriverId { get; set; }
    +decimal Amount { get; set; }
    +BetType BetType { get; set; }
    +BetStatus Status { get; set; }
    +decimal Winnings { get; set; }
    +DateTime CreatedAt { get; set; }
    +DateTime? ResolvedAt { get; set; }
  }

  class "PagedResult<T>" as PagedResultDto {
    +T[] Items { get; set; }
    +int Page { get; set; }
    +int PageSize { get; set; }
    +int TotalItems { get; set; }
    +int TotalPages { get; set; }
  }

  class "AuthResponseDto" {
    +bool IsSuccess { get; set; }
    +string AccessToken { get; set; }
    +string RefreshToken { get; set; }
    +int AccessTokenExpiration { get; set; }
    +int RefreshTokenExpiration { get; set; }
    +UserDto User { get; set; }
  }

  class "RegisterDto" {
    +string Username { get; set; }
    +string Email { get; set; }
    +string Password { get; set; }
  }

  class "LoginDto" {
    +string UsernameOrEmail { get; set; }
    +string Password { get; set; }
  }

  class "RefreshTokenDto" {
    +string RefreshToken { get; set; }
    +string Token { get; set; }
  }

  class "UpdateProfileDto" {
    +string? Username { get; set; }
    +string? Email { get; set; }
  }
}

' ============================================
' RELATIONSHIPS
' ============================================

' Controller -> Service
UsersController ..> IUserService : uses

' Service -> Repositories
UserService ..> IRepo : depends on (User, Bet)
UserService ..> AppDbContext : uses

' Service -> DTOs
UserService --> AdminUserDto : returns
UserService --> AdjustPointsResultDto : returns
UserService --> UserDto : returns
UserService --> UserProfileDto : returns
UserService --> UserStatisticsDto : returns
UserService --> BetHistoryResponseDto : returns
UserService --> AuthResponseDto : returns
UserService --> PagedResultDto : returns (AdminUserDto)

' Controller -> DTOs
UsersController --> AdminUserDto : returns
UsersController --> AdjustPointsResultDto : returns
UsersController --> PagedResultDto : returns (AdminUserDto)

' Frontend -> Backend
AdminUserManagementComponent ..> UsersController : calls via HTTP
AdjustPointsModalComponent ..> UsersController : calls via HTTP
SuspendUserModalComponent ..> UsersController : calls via HTTP

' Frontend -> DTOs
AdminUserManagementComponent --> AdminUserDto : displays
AdminUserManagementComponent --> PagedResultDto : paginates (AdminUserDto)
AdjustPointsModalComponent --> AdjustUserPointsDto : submits
AdjustPointsModalComponent --> AdjustPointsResultDto : shows result
SuspendUserModalComponent --> ChangeUserStatusDto : submits

' Domain relationships
User "1" *-- "0..*" Bet : has
Bet "N" -- "1" User : references

' Repository -> DbContext
IRepo ..> AppDbContext : uses

' DTO -> Domain
AdminUserDto --> User : maps from
AdjustPointsResultDto --> User : maps from
UserDto --> User : maps from
UserProfileDto --> User : maps from
@enduml
